Model View Controller kinda implemented, it needs some tweaking